[package]
name = "fast-jacobian-group-add"
version = "0.1.0"
edition = "2024"

[dependencies]
creusot-contracts = { version = "0.7.0-dev" }

[patch.crates-io]
creusot-contracts = { path = "/home/opam/creusot/creusot-contracts" }


[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target = "wasm32-unknown-unknown")'.dependencies]
wasm-bindgen = "0.2"